--- a/public/style/main-pages.css
+++ b/public/style/main-pages.css
@@ -115,7 +115,7 @@
         margin-top: 65px;
         width: 100%;
         height: 912px;
-        background-image: url("../image/header/header-photo.png");
+        background-image: url("../image/main/header-photo.png");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
@@ -235,6 +235,11 @@
         font-weight: 700;
     }
 
+    .new-text:hover{ 
+        color: grey;
+        transition: 0.7s;
+    }
+
     .div-slider-new {
         display: flex;
         gap: 20px;
@@ -293,7 +298,7 @@
 
     .new-name {
         font-family: GraphikLCG;
-        font-weight: 0;
+        font-weight: 700;
         font-size: 22px;
         letter-spacing: 1px;
         line-height: 120%;
@@ -361,6 +366,11 @@
         font-weight: 700;
     }
 
+    .xite-text:hover{ 
+        color: grey;
+        transition: 0.7s;
+    }
+
     .div-slider-xite {
         display: flex;
         gap: 20px;
@@ -413,7 +423,7 @@
 
     .xite-name {
         font-family: GraphikLCG;
-        font-weight: 0;
+        font-weight: 700;
         font-size: 22px;
         letter-spacing: 1px;
         line-height: 120%;
@@ -463,25 +473,54 @@
     /* HEADER SERI */
 
     .section-seri {
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
         max-width: 1200px;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
     }
-    .seri-text {
+
+    .seri-baner {
+        box-sizing: border-box;
+        height: 500px;
+        width: 100%;
+        background-image: url("../image/main/seri.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
     }
-    .seri-button {
+
+    .seri-link{
+        letter-spacing: 5px;
+        font-family: Outfit;
+        font-weight: 700;
+        color: black;
+    }
+
+    .seri-link:hover{
+        color: grey;
+        transition: 0.7s;
+    }
+
+    .seri-text {
+        letter-spacing: 5px;
+        font-family: Outfit;
+        font-weight: 700;
+        padding-left: 10px;
+        padding-bottom: 8px;
     }
 
     /* ТОВАРЫ SERI */
 
-    .seri-product { 
+    .seri-product {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 30px;
-        max-width: 1000px;
-        margin: 0 auto;
+        gap: 15px;
+        max-width: 1200px;
+        margin-top: -100px;
     }
 
     .seri-product-list {
@@ -492,26 +531,31 @@
         box-sizing: border-box;
     }
 
-    .seri-button { 
+    .seri-button {
+        background: none;
+        border: none;
+    }
+
+    .seri-button {
         background: none;
         border: none;
         height: 50px;
     }
 
-    .seri-image { 
+    .seri-image {
         height: 50px;
         width: 50px;
     }
 
     .seri-product-ul {
         display: flex;
-        gap: 40px;
+        gap: 20px;
         width: 100%;
         transition: transform 0.8s ease-in-out;
         padding: 5px 0 20px 0;
     }
 
-    .seri-pdocuct-li { 
+    .seri-pdocuct-li {
         width: 100%;
     }
 
@@ -535,7 +579,7 @@
 
     .seri-name {
         font-family: GraphikLCG;
-        font-weight: 0;
+        font-weight: 700;
         font-size: 20px;
         letter-spacing: 1px;
         line-height: 120%;
@@ -579,12 +623,13 @@
     .seri-pdocuct-li:hover .li-icon-shop {
         opacity: 1;
     }
-    
+
 }
 
 @media(max-width: 1368px) {
 
     /* ТЕКСТ С КАРИТНКОЙ HEADER */
+
     .header-photo {
         height: 700px;
     }
@@ -606,6 +651,28 @@
     }
 }
 
+        /* МЕДИА 1225PX */
+
+@media (max-width: 1225px) {
+    
+    /* ABSOLUT SERI */
+
+    .seri-product { 
+        margin-top: -90px;
+    }
+
+    .seri-product-list{ 
+        padding: 0 30px;
+    }
+
+    .section-seri-div{ 
+        max-width: 1000px;
+    }
+    
+}
+
+        /* МЕДИА 1000PX */
+
 @media(max-width: 1000px) {
 
     /* НОВЫЕ ТОВАРЫ */
@@ -618,9 +685,13 @@
         display: none;
     }
 
+    .div-slider-new::-webkit-scrollbar {
+        display: none;
+    }
+
     .new-items {
         overflow-x: scroll;
-        scrollbar-color: rgba(190, 200, 199) white;
+        scrollbar-color: #c5c5c5 white;
         -webkit-overflow-scrolling: touch;
         padding-bottom: 10px;
     }
@@ -664,9 +735,14 @@
         display: none;
     }
 
+    .div-slider-xite::-webkit-scrollbar {
+        display: none; 
+    }
+
+
     .xite-items {
         overflow-x: scroll;
-        scrollbar-color: rgba(190, 200, 199) white;
+        scrollbar-color: #c5c5c5 white;
         -webkit-overflow-scrolling: touch;
         padding-bottom: 10px;
     }
@@ -693,7 +769,33 @@
         transition: none;
         box-shadow: none;
     }
+
+    /* ТОВАРЫ SERI */
+
+    .section-seri {
+        padding: 10px 10px 5px 10px;
+    }
+
+    .seri-product {
+        margin-top: -80px;
+    }
+
+    .seri-button {
+        display: none;
+    }
+
+    .seri-product-ul::-webkit-scrollbar {
+        display: none;
+    }
+
+    .seri-product-ul {
+        overflow-x: scroll;
+        scrollbar-color: #c5c5c5 white;
+        -webkit-overflow-scrolling: touch;
+    }
 }
+
+        /* МЕДИА 768PX */
 
 @media(max-width: 768px) {
 
@@ -702,7 +804,7 @@
     .catalog-ul {
         gap: 25px;
         overflow-x: scroll;
-        scrollbar-color: rgba(190, 200, 199) white;
+        scrollbar-color: #c5c5c5 white;
         -webkit-overflow-scrolling: touch;
         padding-bottom: 10px;
     }
@@ -736,7 +838,19 @@
     .header-photo-button {
         font-size: 14px;
     }
+
+    /* SECTION SERI */
+
+    .section-seri{ 
+        padding: 20px 0;
+    }
+
+    .seri-baner{
+        height: 400px;
+    }
 }
+
+        /* МЕДИА 500PX */
 
 @media(max-width: 500px) {
 
@@ -756,11 +870,11 @@
         height: 500px;
     }
 
-    .header-photo{ 
-        background-image: url("../image/header/header-photo-tel.png");
+    .header-photo {
+        background-image: url("../image/main/header-photo-tel.png");
     }
 
-    .header-photo-div-text{ 
+    .header-photo-div-text {
         max-width: 300px;
     }
 
@@ -774,11 +888,34 @@
 
     .header-photo-discription {
         font-size: 14px;
-        padding: 10px 0 ;
+        padding: 10px 0;
     }
 
     .header-photo-button {
         font-size: 12px;
+    }
+
+        /* SECTION SERI */
+
+    .seri-product{
+        margin-top: -100px;
+    }
+
+    .seri-baner{
+        height: 300px;
+    }
+
+    .seri-photo{
+        width: 170px;
+        height: 170px;
+    }
+
+    .seri-name{
+        font-size: 18px;
+    }
+
+    .seri-description{
+        font-size: 16px;
     }
 
 }
