--- a/public/style/style.css
+++ b/public/style/style.css
@@ -29,6 +29,7 @@ head {
     margin: 0;
     box-sizing: border-box;
     width: 100%;
+    height: 100%;
 }
 
 li {
@@ -55,4 +56,8 @@ a {
 
 button {
     cursor: pointer;
+}
+
+body.no-scroll {
+    overflow: hidden;
 }
